apps/mediamtx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: mediamtx-hls
  namespace: mediamtx
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: stream.akatuki-host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediamtx-hls-proxy
                port:
                  name: http
