apps/mediamtx/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  name: mediamtx-ingress
  namespace: mediamtx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mediamtx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.9.0/24
      ports:
        - protocol: TCP
          port: 1935
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare-tunnel-ingress-controller
      ports:
        - protocol: TCP
          port: 8888
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9998
